--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.17",
     "expo-status-bar": "~2.2.3",
+    "glob": "^11.0.3",
+    "lru-cache": "^11.1.0",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
